test/files/neg/plugin-before-parser/lib/plugins.jar.desired.sha1
72ab27cee282cf10760e6b7c342a21be7404ff6c ?plugins.jar
